--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,22 @@
     --bg-color: #8F79EA;
 }
 
-body{
+body {
     background-color: #E6E6E6;
 }
-nav{
+nav {
     background-color: var(--bg-color);
+}
+
+main {
+    width: 60%;
+    height: 100%;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+h2 {
+    margin: 10px 5px 10px 25px;
 }
 
 .nav-link.active{
