Add pictures to about_us

--- a/css/style.css
+++ b/css/style.css
@@ -81,4 +81,9 @@ h2 {
 
 .btn {
   margin-top: auto;
+  background-color: var(--bg-color);
+}
+
+.author-img{
+    border: 5px solid var(--bg-color);
 }
