--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ h2 {
   background-color: var(--bg-color);
 }
 
+#article-body{
+    min-height: 90vh;
+}
+
 .author-img{
     position: absolute;
     width: 110%;
