--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,6 @@ h2 {
     max-width:600px;
 }
 
-.carousel-item>img{
-    height:50vh;
-}
-
 .card-block {
     font-size: 1em;
     position: relative;
@@ -61,36 +57,14 @@ h2 {
     margin-top:20px;
 }
 
-.carousel-indicators li {
-    border-radius: 12px;
-    width: 12px;
-    height: 12px;
-    background-color: #404040;
-}
-.carousel-indicators li {
-    border-radius: 12px;
-    width: 12px;
-    height: 12px;
-    background-color: #404040;
-}
-.carousel-indicators .active {
-    background-color: white;
-    max-width: 12px;
-    margin: 0 3px;
-    height: 12px;
-}
-.carousel-control-prev-icon {
- background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-}
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
-  flex-direction: column;
-}
-
 .btn {
   margin-top: auto;
   background-color: var(--bg-color);
+  border: none;
+}
+
+.btn:hover{
+    background-color: #e276c1;
 }
 
 #article-body{
@@ -107,12 +81,17 @@ h2 {
     right: 0;
 }
 
+.author-img-container:hover{
+    transform: scale(1.1);
+}
+
 .author-img-container{
     padding-bottom:100%;
     width:100%;
     overflow:hidden;
     position:relative;
     border: 5px solid var(--bg-color);
+    transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .article-author{
